test/good/ex6.cb
def main() {
    if !true {
        printInt(1)
    } else {
        printInt(0)
    }
}
