test/bad/ex2.cb
def main() {
    let x = if true {
        5
    } else {
        true
    }
}
